syntax = "proto3";
option go_package = "api/bidirectional;bidirectional";

package bidirectional;

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}

service BidirectionalService {
  rpc GetUser(stream GetUserRequest) returns (stream GetUserResponse) {}
}